
* QSqlTableModel::setData() and setRecord() no longer revert pending changes
that fail upon resubmitting for edit strategies OnFieldChange and OnRowChange.
Instead, pending (failed) changes cause new changes inappropriate to the
edit strategy to be refused. The application should resolve or revert pending
changes. insertRows() and insertRecord() also respect the edit strategy.

****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------


Qt for Windows
--------------
* Accessibility framework uses IAccessible2


Qt for Mac OS X
---------------


Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *
****************************************************************************

- Build System

  * Remove qttest_p4.prf file. From now on we should explicitly enable the
    things from it which we want. Autotest .pro files should stop using
    'load(qttest_p4)' and start using 'CONFIG+=testcase' instead.

- Assistant

- Designer
  * [QTBUG-8926] [QTBUG-20440] Properties of type QStringList now have
    translation attributes which apply to all items.
    They are by default translatable.

- Linguist

- rcc


- moc
